# gperftools_demo

./: README.md
cpu_profiler/: main.cpp
heap_checker/: CMakeLists.txt
third_lib/: CMakeLists.txt
third_lib/cpu_profiler/: CMakeLists.txt
third_lib/gperftools/include/gperftools/: tcmalloc.h
third_lib/gperftools/lib/lib/: libprofiler.la  libprofiler.so.0.5.11  libtcmalloc.la  libtcmalloc.so.4  libtcmalloc_and_profiler.la  libtcmalloc_debug.la  libtcmalloc_minimal.la  libtcmalloc_minimal.so.4.5.16  libtcmalloc_minimal_debug.la  libtcmalloc_minimal_debug.so.4  libtcmalloc_minimal_debug.so.4.5.16
third_lib/gperftools/lib/lib/pkgconfig/: libprofiler.pc  libtcmalloc.pc  libtcmalloc_debug.pc  libtcmalloc_minimal.pc  libtcmalloc_minimal_debug.pc
third_lib/heap_checker/: main.cpp
